--- a/configurations.org
+++ b/configurations.org
@@ -2,12 +2,11 @@
 ** package initalize stuff
 #+BEGIN_SRC emacs-lisp
 (require 'package)
-(setq package-enable-at-startup nil)
 (add-to-list 'package-archives
 	     '("melpa" . "https://melpa.org/packages/"))
-
 (package-initialize)
 
+(setq package-enable-at-startup nil)
 (setq inhibit-startup-message t)
 (tool-bar-mode -1)
 
@@ -15,33 +14,43 @@
 (unless (package-installed-p 'use-package)
         (package-refresh-contents)
         (package-install 'use-package))
+(require 'use-package)
   
 #+END_SRC
-** use package
+** try package
 #+BEGIN_SRC emacs-lisp 
 (use-package try
 	     :ensure t)
 #+END_SRC
-** whichkey
-#+BEGIN_SRC emacs-lisp 
-(use-package which-key
-	     :ensure t
-	     :config
-	     (which-key-mode))
-#+END_SRC
-** ido-mode everywhere
+** evil mode ;)
 #+BEGIN_SRC emacs-lisp
-
-(setq ido-everywhere t)
-
-(ido-mode 1)
-
-;; this is your life saver.. get rid of this damn bell..
-(setq ring-bell-function 'ignore)
-
-(use-package counsel
+;; lets include some evil mode stuff!
+;; who doesn't want to get good at vim? ;)
+;; (add-to-list 'load-path "~/.emacs.d/evil")
+;; (require 'evil)
+;; (evil-mode 1)
+(use-package evil
   :ensure t
+  :config
+  (evil-mode 1)
+  ;; More configuration goes here
   )
+#+END_SRC
+#+BEGIN_SRC emacs-lisp
+(setq evil-normal-state-tag   (propertize " COMMAND " 'face '((:background "dark khaki" :foreground "black")))
+      evil-emacs-state-tag    (propertize "  EMACS  " 'face '((:background "turquoise" :foreground "black")))
+      evil-insert-state-tag   (propertize "  INSERT  " 'face '((:background "dark sea green" :foreground "black")))
+      evil-replace-state-tag  (propertize " REPLACE " 'face '((:background "dark orange" :foreground "black")))
+      evil-motion-state-tag   (propertize "  MOTION " 'face '((:background "khaki" :foreground "black")))
+      evil-visual-state-tag   (propertize "  VISUAL " 'face '((:background "light salmon" :foreground "black")))
+      evil-operator-state-tag (propertize " OPERATE " 'face '((:background "sandy brown" :foreground "black"))))
+#+END_SRC
+#+BEGIN_SRC emacs-lisp
+(require 'powerline)
+(powerline-center-evil-theme)
+#+END_SRC
+#+BEGIN_SRC emacs-lisp
+(require 'evil-magit)
 #+END_SRC
 ** swiper
 #+BEGIN_SRC emacs-lisp
@@ -72,6 +81,25 @@
     (define-key minibuffer-local-map (kbd "C-r") 'counsel-minibuffer-history)
     ))
 #+END_SRC
+** whichkey
+#+BEGIN_SRC emacs-lisp 
+(use-package which-key
+	     :ensure t
+	     :config
+	     (which-key-mode))
+#+END_SRC
+** ido-mode everywhere
+#+BEGIN_SRC emacs-lisp
+(setq ido-everywhere t)
+(ido-mode 1)
+
+;; this is your life saver.. get rid of this damn bell..
+(setq ring-bell-function 'ignore)
+
+(use-package counsel
+  :ensure t
+  )
+#+END_SRC
 ** list buffers and flycheck and autocomplete
 #+BEGIN_SRC emacs-lisp
   (defalias 'list-buffers 'ibuffer)
@@ -99,17 +127,6 @@
   ;; 	    (setq flycheck-python-pylint-executable "/usr/bin/pylint")
   ;; 	    (setq flycheck-pylintrc "/Users/kevinkeefe/.pylintrc"))
 #+END_SRC
-
-** execess stuff for trying misc
-#+BEGIN_SRC emacs-lisp
-  ;; if you want a hell of a lot more themes:
-  ;; (use-package color-theme
-  ;;    :ensure t)
-
-  ;; (use-package zenburn-theme
-  ;;   :ensure t
-  ;;   :config (load-theme 'zenburn t))
-#+END_SRC
 ** fixing macOs pathing according to flycheck..
 #+BEGIN_SRC emacs-lisp
 ;; flycheck claims that this fixes pathing errors..
@@ -130,24 +147,27 @@
 ;;   (tabbar-mode 1))
   
 #+END_SRC
-** evil mode ;)
-#+BEGIN_SRC emacs-lisp
-;; lets include some evil mode stuff!
-;; who doesn't want to get good at vim? ;)
-(add-to-list 'load-path "~/.emacs.d/evil")
-(require 'evil)
-(evil-mode t)
-#+END_SRC
 ** removing bugger colors for iterm 2 
 #+BEGIN_SRC emacs-lisp
  ;; this silly command, believe it or not, removes iterm2 error on emacs startup
 (delete-file "~/Library/Colors/Emacs.clr")
 #+END_SRC
+** lets make some things pretty :D
+*** execess stuff for trying misc
+ #+BEGIN_SRC emacs-lisp
+   ;; (use-package color-theme
+   ;;    :ensure t)
+
+   (use-package zenburn-theme
+     :ensure t
+     :init (load-theme 'zenburn t))
+ #+END_SRC
 ** reveal.js
-# #+BEGIN_SRC emacs-lisp
-#   (setq org-reveal-mathjax t)
-#   (use-package ox-reveal
-#       :ensure ox-reveal)
-#       (setq org-reveal-root "http://cdn.jsdelivr.net/reveal.js/3.0.0/")
-#       (setq org-reveal-mathjax t) 
-# #+END_SRC
+#+BEGIN_SRC emacs-lisp
+  (setq org-reveal-mathjax t)
+  (use-package ox-reveal
+      :ensure ox-reveal)
+      (setq org-reveal-root "http://cdn.jsdelivr.net/reveal.js/3.0.0/")
+      (setq org-reveal-mathjax t) 
+#+END_SRC
+
